data/all_generated_tests/raw_wast_tests/block_StackCorruption_1919.wast
;; 10. **Incorrect Block End Handling Leading to Stack Imbalance**:    - Design a block where the `end` instruction misinterprets the stack state, either leaving excessive values or missing expected values on the stack.    - Analyze if one implementation correctly balances the stack at block end, while the other framework leaves the stack corrupted.

(assert_invalid
  (module (func $block-end-stack-imbalance
    (block (result i32)
      (i32.const 42)
      (br 0)
      (i32.const 23)
    )
  ))
  "type mismatch"
)